A little review of early chapters, a little AGHQ chapter

--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -48,7 +48,7 @@ coverage2022 <- 76
 HIV is a retrovirus which infects humans.
 If untreated, HIV can develop into a more advanced stage known as acquired immunodeficiency syndrome (AIDS).
 HIV primarily attacks a type of white blood cell vital for the function of the immune system.
-As a result, AIDS is characterised by increased risk of developing opportunistic infections such as tuberculosis or *Pneumocystis* pneumonias.
+As a result, AIDS is characterised by increased risk of developing opportunistic infections such as tuberculosis or *Pneumocystis* pneumonias, which can result in death.
 
 <!-- HIV is a big problem, plus how is it transmitted -->
 The first AIDS cases were reported in Los Angeles in the early 1980s [@gottlieb1981pneumocystis; @barre1983isolation].
@@ -65,8 +65,8 @@ global_fund <- round((24.2 + 5)) * 1e9
 
 <!-- A lot of effort going into it -->
 An ongoing global and multifaceted effort has been made to respond to the epidemic.
-The response has been shaped by local communities, civil society organisations, governments, research institutions, pharmaceutical companies, international agencies like the Joint United Nations Programme on HIV/AIDS (UNAIDS), and global health initiatives such like the President's Emergency Plan for AIDS Relief (PEPFAR) and the Global Fund to Fight AIDS, Tuberculosis, and Malaria (the Global Fund).
-The investment of $`r custom_numbers_to_words(pepfar)` by PEPFAR, constituting the "largest commitment by a single nation to address a single disease in history" [@pepfar2022], is indicative of the scale of the response.
+The response has been shaped by local communities, civil society organisations, national governments, research institutions, pharmaceutical companies, international agencies like the Joint United Nations Programme on HIV/AIDS (UNAIDS), and global health initiatives such like the President's Emergency Plan for AIDS Relief (PEPFAR) and the Global Fund to Fight AIDS, Tuberculosis, and Malaria (the Global Fund).
+To give an indication as to the scale of the response, the investment of $`r custom_numbers_to_words(pepfar)` by PEPFAR constitutes the "largest commitment by a single nation to address a single disease in history" [@pepfar2022].
 
 ```{r}
 #' From https://www.unaids.org/en/resources/presscentre/featurestories/2021/september/20210906_global-roll-out-hiv-treatment
@@ -83,7 +83,7 @@ knitr::include_graphics("figures/hiv-aids/overall-picture.png")
 
 <!-- The effort has translated into progress -->
 Implementation of HIV prevention and treatment has significantly reduced the number of new HIV infections and AIDS-related deaths per year since their peak (Figure \@ref(fig:overall-picture)).
-The most significant evidence-based interventions are:
+The most significant evidence-based interventions, in chronological order, are described below:
 
 * Condoms are an inexpensive and effective method for prevention of HIV and other sexually transmitted infections (STIs) such as *Chlamydia trachomatis*, *Neisseria gonorroeae*, syphilis, and *Trichomonas vaginalis*.
 Condom usage has increased significantly since 1990, which is estimated to have averted `r custom_numbers_to_words(condom_infections_averted)` new HIV infections [@stover2021impact].
@@ -93,7 +93,7 @@ A person living with HIV who takes ART daily can live a full and healthy life, t
 Of the `r custom_numbers_to_words(plhiv2022)` people living with HIV (PLHIV) in 2022, around `r coverage2022`% were accessing ART.
 A staggering `r custom_numbers_to_words(art_deaths_averted)` AIDS-related deaths are estimated to have been averted by ART [@unaids2023global].
 ART reduces the amount of virus in the blood and genital secretions.
-If the virus is undetectable then there is considerable evidence that it cannot be transmitted sexually [@cohen2011prevention; @broyles2023risk].
+If the virus is undetectable then there is significant evidence that it cannot be transmitted sexually [@cohen2011prevention; @broyles2023risk].
 For this reason, in addition to providing life saving treatment, ART also operates as prevention.
 Particular efforts have been made to provide pregnant women with ART to reduce the chance of mother-to-child transmission (MTCT) [@siegfried2011antiretrovirals].
 * Voluntary medical male circumcision (VMMC) partially protects against female-to-male HIV acquisition.
@@ -106,7 +106,7 @@ PrEP and PEP are more costly than some other prevention options, so primarily us
 Though important progress had been made, there remains much more to do.
 In 2022, `r custom_numbers_to_words(infections2022)` people were newly infected with HIV and there were `r custom_numbers_to_words(deaths2022)` AIDS-related deaths, more than one every minute [@unaids2022global].
 Bold fast-track targets have been set to accelerate the end of AIDS as global public health threat by 2030.
-Renewed commitment is required to meet these targets in the context of disruption to HIV services caused by the COVID-19 pandemic and a shortfall in HIV funding [@economist2023triple]. 
+Renewed commitments are required to meet these targets in the context of disruption to HIV services caused by the COVID-19 pandemic and a potential shortfall in HIV funding [@economist2023triple].
 
 (ref:naomi-continent) Adult (15-49) HIV prevalence varies substantially both within and between countries in SSA. These estimates from 2023 were generated by country teams using the Naomi small-area estimation model in a process supported by UNAIDS and are available from @unaids2023aidsinfo. White filled points are country-level estimates, and coloured points are district-level estimates. Results from Nigeria were not published. Data collection in the Cabo Delgado province of Mozambique was disrupted by conflict. Obtaining results for the Democratic Republic of the Congo required removing some districts from the model. Country names are given by three-leter codes as published by the International Organization for Standardization (ISO).
 
@@ -115,9 +115,9 @@ knitr::include_graphics("figures/hiv-aids/naomi-continent.png")
 ```
 
 <!-- Prioritisation of interventions  -->
-For available resources to have the greatest impact, it is important that HIV interventions are prioritised.
-Under the precision public health paradigm, the right interventions should be provided to the right populations, in the right place, at the right time [@khoury2016precision].
-Some interventions might be orders of magnitude more impactful than others [@ord2013moral].
+For available resources to have the greatest impact, it is important that the right HIV interventions are prioritised to the right populations, in the right place, and at the right time.
+This paradigm has been described as precision public health [@khoury2016precision] at a population-level, by analogy to precision medicine at the individual-level.
+Differences in cost-effectiveness can be vast, with some interventions orders of magnitude more impactful than others [@ord2013moral].
 
 <!-- Uneven burden in space -->
 Disease burden varies substantially across multiple spatial scales.
@@ -137,7 +137,7 @@ Examples include men who have sex with men (MSM), female sex workers (FSW), peop
 KPs are often marginalised, and face legal and social barriers.
 In concentrated settings, the majority of new HIV infections occur in KPs and their sexual partners.
 In generalised settings like SSA, risk is more diffuse across the population.
-For example, in SSA adolescent girls and young women (AGYW) are a large demographic group at increased risk of HIV infection [@risher2021age; @monod2023growing], but not typically considered a KP.
+For example, in SSA adolescent girls and young women (AGYW) are a large demographic group at increased risk of HIV infection [@risher2021age; @monod2023growing] but not typically considered a KP.
 
 <!-- Practical methods for prevention prioritisation: geographic, demographic, key population services, risk screening, individual-level risk characteristics. -->
 
