--- a/docs/main.tex
+++ b/docs/main.tex
@@ -325,10 +325,10 @@
 
 %%%%% ACKNOWLEDGEMENTS -- Nothing to do here except comment out if you don't want it.
 \begin{acknowledgements}
- 	Thanks to my supervisors Seth Flaxman and Jeff Eaton for their guidance and mentorship.
+ 	Thank you to my supervisors Seth Flaxman and Jeff Eaton for their guidance and mentorship.
  I am grateful for the research environment provided by the Modern Statistics and Statistical Machine Learning Centre for Doctoral Training at Imperial and Oxford, the HIV Inference Group at Imperial, and the Machine Learning and Global Health Network across the UK, Denmark, Germany and Singapore.
- Thanks to Mike McLaren, Kevin Esvelt, the Nucleic Acid Observatory team, and the Sculpting Evolution lab for hosting my visit to the MIT Media Lab.
- Thanks to Alex Stringer, and the Department of Statistics and Actuarial Science for hosting my visit to the University of Waterloo.
+ Thank you to Mike McLaren, Kevin Esvelt, the Nucleic Acid Observatory team, and the Sculpting Evolution lab for hosting my visit to the MIT Media Lab.
+ Thank you to Alex Stringer, and the Department of Statistics and Actuarial Science for hosting my visit to the University of Waterloo.
  My sense for what matters has been shaped (arguably improved) by the Effective Altruism community.
  This research was made possible by funding provided by the Bill \& Melinda Gates Foundation and EPSRC.
 
@@ -395,7 +395,7 @@ Together, the contributions in this thesis help to guide precision HIV policy in
 
 This thesis is about applied and methodological Bayesian statistics.
 It is applied and methodological in that I am concerned with real world questions and the means to answer them.
-The statistical approach is Bayesian because I arrived at conclusions based on data using probability models.
+The statistical approach is Bayesian because I used probability theory to arrive at conclusions based on models for observed data.
 
 
 
@@ -414,10 +414,10 @@ Quantification of the epidemic using statistics is an important part of the publ
 Effective implementation of both HIV prevention and treatment requires strategic information.
 However, producing suitable estimates of relevant indicators is challenging.
 
-The data I use are recorded from national household surveys or routinely collected from healthcare facilities providing HIV services.
-An important feature of these data are the location and the time at which each observation was recorded
-While diverse, spatio-temporal data have distinctive commonalities which reoccur across settings.
-As a result, the work in this thesis makes use of, and aspires to contribute to the development of, modelling techniques from spatio-temporal statistics.
+The data I use were recorded from national household surveys or routinely collected from healthcare facilities providing HIV services.
+An important feature of these data are the location and time at which each observation was recorded
+While diverse, spatio-temporal data have distinctive reoccuring commonalities across application settings.
+As a result, the work in this thesis both makes use of, and aspires to contribute to, modelling techniques from spatio-temporal statistics.
 
 Computation is an essential part of modern statistical practice.
 Each project in this thesis, and the thesis itself, is accompanied by R \autocite{r} code, hosted on GitHub at \href{https://github.com/athowes}{\texttt{https://github.com/athowes}}.
@@ -425,7 +425,7 @@ Each project in this thesis, and the thesis itself, is accompanied by R \autocit
 \hypertarget{chapter-overview}{%
 \section{Chapter overview}\label{chapter-overview}}
 
-This thesis is structured (Figure \ref{fig:chapter-flowchart}) as follows:
+This thesis is structured as follows:
 
 \begin{itemize}
 \tightlist
@@ -451,16 +451,7 @@ This thesis is structured (Figure \ref{fig:chapter-flowchart}) as follows:
   Chapter \ref{conclusions}: Finally, I discuss avenues for future work, and my conclusions regarding the research, as well as its strengths and weaknesses.
 \end{itemize}
 
-
-
-\begin{figure}
-
-{\centering \includegraphics[width=0.95\linewidth]{figures/introduction/chapter-flowchart} 
-
-}
-
-\caption{Some chapters of the thesis should be read before others. Dashed lines represent recommended, but not required reading. Though chronological order is recommended, Chapters \ref{beyond-borders}, \ref{multi-agyw} and \ref{naomi-aghq} may be read in any order as they correspond to research projects which are for the most part separable.}\label{fig:chapter-flowchart}
-\end{figure}
+Though chronological order is recommended, Chapters \ref{beyond-borders}, \ref{multi-agyw} and \ref{naomi-aghq} may be read in any order.
 
 \hypertarget{hiv-aids}{%
 \chapter{The HIV/AIDS epidemic}\label{hiv-aids}}
@@ -474,7 +465,7 @@ This thesis is structured (Figure \ref{fig:chapter-flowchart}) as follows:
 HIV is a retrovirus which infects humans.
 If untreated, HIV can develop into a more advanced stage known as acquired immunodeficiency syndrome (AIDS).
 HIV primarily attacks a type of white blood cell vital for the function of the immune system.
-As a result, AIDS is characterised by increased risk of developing opportunistic infections such as tuberculosis or \emph{Pneumocystis} pneumonias.
+As a result, AIDS is characterised by increased risk of developing opportunistic infections such as tuberculosis or \emph{Pneumocystis} pneumonias, which can result in death.
 
 The first AIDS cases were reported in Los Angeles in the early 1980s \autocite{gottlieb1981pneumocystis,barre1983isolation}.
 Since then, HIV has spread globally.
@@ -483,8 +474,8 @@ The most common mode of transmission is via unprotected anal or vaginal sex, tho
 Approximately 86 million people have become infected with HIV, and of those 40 million have died of AIDS-related causes.
 
 An ongoing global and multifaceted effort has been made to respond to the epidemic.
-The response has been shaped by local communities, civil society organisations, governments, research institutions, pharmaceutical companies, international agencies like the Joint United Nations Programme on HIV/AIDS (UNAIDS), and global health initiatives such like the President's Emergency Plan for AIDS Relief (PEPFAR) and the Global Fund to Fight AIDS, Tuberculosis, and Malaria (the Global Fund).
-The investment of \$100 billion by PEPFAR, constituting the ``largest commitment by a single nation to address a single disease in history'' \autocite{pepfar2022}, is indicative of the scale of the response.
+The response has been shaped by local communities, civil society organisations, national governments, research institutions, pharmaceutical companies, international agencies like the Joint United Nations Programme on HIV/AIDS (UNAIDS), and global health initiatives such like the President's Emergency Plan for AIDS Relief (PEPFAR) and the Global Fund to Fight AIDS, Tuberculosis, and Malaria (the Global Fund).
+To give an indication as to the scale of the response, the investment of \$100 billion by PEPFAR constitutes the ``largest commitment by a single nation to address a single disease in history'' \autocite{pepfar2022}.
 
 
 
@@ -498,7 +489,7 @@ The investment of \$100 billion by PEPFAR, constituting the ``largest commitment
 \end{figure}
 
 Implementation of HIV prevention and treatment has significantly reduced the number of new HIV infections and AIDS-related deaths per year since their peak (Figure \ref{fig:overall-picture}).
-The most significant evidence-based interventions are:
+The most significant evidence-based interventions, in chronological order, are described below:
 
 \begin{itemize}
 \tightlist
@@ -512,7 +503,7 @@ The most significant evidence-based interventions are:
   Of the 39 million people living with HIV (PLHIV) in 2022, around 76\% were accessing ART.
   A staggering 21 million AIDS-related deaths are estimated to have been averted by ART \autocite{unaids2023global}.
   ART reduces the amount of virus in the blood and genital secretions.
-  If the virus is undetectable then there is considerable evidence that it cannot be transmitted sexually \autocite{cohen2011prevention,broyles2023risk}.
+  If the virus is undetectable then there is significant evidence that it cannot be transmitted sexually \autocite{cohen2011prevention,broyles2023risk}.
   For this reason, in addition to providing life saving treatment, ART also operates as prevention.
   Particular efforts have been made to provide pregnant women with ART to reduce the chance of mother-to-child transmission (MTCT) \autocite{siegfried2011antiretrovirals}.
 \item
@@ -528,7 +519,7 @@ The most significant evidence-based interventions are:
 Though important progress had been made, there remains much more to do.
 In 2022, 1.3 million people were newly infected with HIV and there were 630 thousand AIDS-related deaths, more than one every minute \autocite{unaids2022global}.
 Bold fast-track targets have been set to accelerate the end of AIDS as global public health threat by 2030.
-Renewed commitment is required to meet these targets in the context of disruption to HIV services caused by the COVID-19 pandemic and a shortfall in HIV funding \autocite{economist2023triple}.
+Renewed commitments are required to meet these targets in the context of disruption to HIV services caused by the COVID-19 pandemic and a potential shortfall in HIV funding \autocite{economist2023triple}.
 
 
 
@@ -541,9 +532,9 @@ Renewed commitment is required to meet these targets in the context of disruptio
 \caption{Adult (15-49) HIV prevalence varies substantially both within and between countries in SSA. These estimates from 2023 were generated by country teams using the Naomi small-area estimation model in a process supported by UNAIDS and are available from \textcite{unaids2023aidsinfo}. White filled points are country-level estimates, and coloured points are district-level estimates. Results from Nigeria were not published. Data collection in the Cabo Delgado province of Mozambique was disrupted by conflict. Obtaining results for the Democratic Republic of the Congo required removing some districts from the model. Country names are given by three-leter codes as published by the International Organization for Standardization (ISO).}\label{fig:naomi-continent}
 \end{figure}
 
-For available resources to have the greatest impact, it is important that HIV interventions are prioritised.
-Under the precision public health paradigm, the right interventions should be provided to the right populations, in the right place, at the right time \autocite{khoury2016precision}.
-Some interventions might be orders of magnitude more impactful than others \autocite{ord2013moral}.
+For available resources to have the greatest impact, it is important that the right HIV interventions are prioritised to the right populations, in the right place, and at the right time.
+This paradigm has been described as precision public health \autocite{khoury2016precision} at a population-level, by analogy to precision medicine at the individual-level.
+Differences in cost-effectiveness can be vast, with some interventions orders of magnitude more impactful than others \autocite{ord2013moral}.
 
 Disease burden varies substantially across multiple spatial scales.
 In some countries, the epidemic is concentrated in small populations, and national HIV prevalence is low.
@@ -561,7 +552,7 @@ Examples include men who have sex with men (MSM), female sex workers (FSW), peop
 KPs are often marginalised, and face legal and social barriers.
 In concentrated settings, the majority of new HIV infections occur in KPs and their sexual partners.
 In generalised settings like SSA, risk is more diffuse across the population.
-For example, in SSA adolescent girls and young women (AGYW) are a large demographic group at increased risk of HIV infection \autocite{risher2021age,monod2023growing}, but not typically considered a KP.
+For example, in SSA adolescent girls and young women (AGYW) are a large demographic group at increased risk of HIV infection \autocite{risher2021age,monod2023growing} but not typically considered a KP.
 
 \hypertarget{surveillance}{%
 \section{HIV surveillance}\label{surveillance}}
@@ -1389,7 +1380,7 @@ Though AGYW are only 28\% of the population, they comprise 44\% of new infection
 HIV incidence for AGYW is 2.4 times higher than for similarly aged (15-29) males.
 The social and biological reasons for this disparity include structural vulnerabilities and power imbalances, age patterns of sexual mixing, a younger age at first sex, and increased susceptibility to HIV infection.
 On this basis, AGYW have been identified as a priority population for HIV prevention services.
-Significant investments, such as the DREAMS partnership \autocite{saul2018dreams} and by the the Global Fund \autocite{global2018measurement}, have been made to support prevention programming.
+Significant investments, such as the DREAMS partnership \autocite{saul2018dreams} and by the Global Fund \autocite{global2018measurement}, have been made to support prevention programming.
 
 The Global AIDS Strategy 2021-2026 \autocite{unaids2021global} was adopted by the United Nations (UN) General Assembly in June 2021, and ``outlines the strategic priorities and actions to be implemented by global, regional, country and community partners to get on-track to ending AIDS''.
 It proposed stratifying HIV prevention packages to AGYW based on two factors
@@ -1462,7 +1453,7 @@ High & Non-regular or multiple partner(s) & 1.72 \\
 Very High & Reporting transactional sex (later adjusted to correspond to FSW) & 3.0-25.0 (varied depending on local HIV incidence) \\
 \end{longtable}
 
-I used household survey data from 13 countries identified by the the Global Fund \autocite{global2018measurement} as priority countries for implementation of AGYW HIV prevention.
+I used household survey data from 13 countries identified by the Global Fund \autocite{global2018measurement} as priority countries for implementation of AGYW HIV prevention.
 These countries were Botswana, Cameroon, Kenya, Lesotho, Malawi, Mozambique, Namibia, South Africa, Eswatini, Tanzania, Uganda, Zambia and Zimbabwe.
 Surveys conducted in these countries between 1999 and 2018 were included in which both women were interviewed about their sexual behaviour, and sufficient geographic information was available to locate survey clusters to health districts.
 There were 46 suitable surveys (Figure \ref{fig:available-surveys}), with a total sample size of 274,970 women aged 15-29 years.
@@ -2354,12 +2345,12 @@ This is undesirable as it could result in underestimation of uncertainty, ultima
 The methods developed in this chapter combine Laplace approximations with adaptive quadrature, and are descended from the integrated nested Laplace approximation (INLA) method pioneered by \textcite{rue2009approximate}.
 The INLA method has enabled fast and accurate Bayesian inferences for a vast array of models, across a large number of scientific fields \autocite{rue2017bayesian}.
 The success of INLA is in large part due to its accessible implementation in the \texttt{R-INLA} software.
-Most applications of and methodological developments relating to the INLA method have used \texttt{R-INLA}, with a small number of exceptions \autocite{wood2020simplified,stringer2022fast}.
+Most applications and methodological developments of the INLA method, with few exceptions \autocite{wood2020simplified,stringer2022fast}, have used \texttt{R-INLA}.
 In pursuit of an a suitable inference approach for the Naomi model, I implemented an INLA-like method outside \texttt{R-INLA}, building upon \textcite{stringer2022fast}.
 My implementation is compatible with a wider range of models than \texttt{R-INLA}, and uses automatic differentiation to obtain the derivatives required for the Laplace approximation.
 
-I began work on this project at the start of my PhD, and only began making meaningful progress after reading \textcite{stringer2022fast}.
-I am grateful to later have had the opportunity to collaborate with Alex Stringer, including visiting the University of Waterloo in fall term of 2022.
+Though I began working on this project close to the start of my PhD, I only began making meaningful progress after reading \textcite{stringer2022fast}.
+I am grateful to later have had the opportunity to collaborate with Alex Stringer, and visit the University of Waterloo during the fall term of 2022.
 The results of our work are presented in \textcite{howes2023fast}.
 Code for the analysis in this chapter is available from \href{https://github.com/athowes/elgm-inf}{\texttt{https://github.com/athowes/naomi-aghq}}.
 
@@ -2479,8 +2470,8 @@ The resulting marginal Laplace approximation, for a particular value of the hype
 
 The marginal Laplace approximation is most accurate when then marginal posterior \(p(\mathbf{x} \, | \, \boldsymbol{\mathbf{\theta}}, \mathbf{y})\) is accurately approximated by a Gaussian
 distribution.
-For the class of latent Gaussian models \autocite{rue2009approximate} the prior on the latent field is Gaussian \(\mathbf{x} \sim \mathcal{N}(\mathbf{x} \, | \, \boldsymbol{\mathbf{\theta}})\).
-Although the marginal posterior
+For the class of latent Gaussian models \autocite{rue2009approximate} the prior distribution on the latent field is Gaussian \(\mathbf{x} \sim \mathcal{N}(\mathbf{x} \, | \, \boldsymbol{\mathbf{\theta}})\).
+Although the marginal posterior distribution
 \begin{align}
 p(\mathbf{x} \, | \, \boldsymbol{\mathbf{\theta}}, \mathbf{y}) \propto \mathcal{N}(\mathbf{x} \, | \, \boldsymbol{\mathbf{\theta}}) p(\mathbf{y}  \, | \, \mathbf{x}, \boldsymbol{\mathbf{\theta}})
 \end{align}
@@ -2610,7 +2601,7 @@ and corresponds exactly to the Laplace approximation \(\tilde p_{\texttt{LA}}(\m
 
 }
 
-\caption{The Gauss-Hermite quadrature nodes \(\mathbf{z} \in \mathcal{Q}(2, 3)\) for a two-dimensional integral with three nodes per dimension (A). Adaption occurs based on the mode (B) and covariance of the integrand via either the Cholesky (C) or spectral (D) decomposition of the inverse curvature at the mode. The integrand is \(f(z_1, z_2) = \text{sn}(0.5 z_1, \alpha = 2) \cdot \text{sn}(0.8 z_1 - 0.5 z_2, \alpha = -2)\), where \(\text{sn}(\cdot)\) is the standard skewnormal probability density function with shape parameter \(\alpha \in \mathbb{R}\).}\label{fig:aghq-demo}
+\caption{The Gauss-Hermite quadrature nodes \(\mathbf{z} \in \mathcal{Q}(2, 3)\) for a two-dimensional integral with three nodes per dimension (A). Adaption occurs based on the mode (B) and covariance of the integrand via either the Cholesky (C) or spectral (D) decomposition of the inverse curvature at the mode. Here, the integrand is \(f(z_1, z_2) = \text{sn}(0.5 z_1, \alpha = 2) \cdot \text{sn}(0.8 z_1 - 0.5 z_2, \alpha = -2)\), where \(\text{sn}(\cdot)\) is the standard skewnormal probability density function with shape parameter \(\alpha \in \mathbb{R}\). For each quadrature rule, the estimate of the integral is given by\ldots{}}\label{fig:aghq-demo}
 \end{figure}
 
 Two alternatives for the matrix decomposition \(\hat{\boldsymbol{\mathbf{H}}}^{-1} = \hat{\mathbf{P}} \hat{\mathbf{P}}^\top\) are the Cholesky and spectral decomposition \autocite{jackel2005note}.
@@ -2641,26 +2632,49 @@ The nested AGHQ estimate of the posterior normalising constant is then
 \begin{equation}
 \tilde p_{\texttt{AQ}}(\mathbf{y}) = | \hat{\mathbf{P}}_\texttt{LA} | \sum_{\mathbf{z} \in \mathcal{Q}(m, k)} \tilde p_\texttt{LA}(\boldsymbol{\mathbf{\theta}}(\mathbf{z}), \mathbf{y}) \omega(\mathbf{z}).
 \end{equation}
+The normalised marginal Laplace approximation is
+\begin{equation}
+\tilde p_{\texttt{LA}}(\boldsymbol{\mathbf{\theta}} \, | \, \mathbf{y}) = \frac{\tilde p_{\texttt{LA}}(\boldsymbol{\mathbf{\theta}}, \mathbf{y})}{\tilde p_{\texttt{AQ}}(\mathbf{y})}.
+\end{equation}
+Methods for obtaining \(\tilde p(\mathbf{x} \, | \, \mathbf{y})\) vary.
 
 \hypertarget{gaussian-marginals}{%
 \subsubsection{Gaussian marginals}\label{gaussian-marginals}}
 
-Multinomial then Gaussian.
+Inferences for the latent field can be obtained by \autocite{rue2007approximate}
+\begin{equation}
+\tilde p(\mathbf{x} \, | \, \mathbf{y}) = |\hat{\mathbf{P}}_\texttt{LA}| \sum_{\mathbf{z} \in \mathcal{Q}(m, k)} \tilde p_\texttt{G}(\mathbf{x} \, | \, \hat{\mathbf{P}}_\texttt{LA} \mathbf{z} + \hat{\boldsymbol{\mathbf{\theta}}}_\texttt{LA}, \mathbf{y}) \tilde p_\texttt{LA}(\hat{\mathbf{P}}_\texttt{LA} \mathbf{z} + \hat{\boldsymbol{\mathbf{\theta}}}_\texttt{LA} \, | \, \mathbf{y}) \omega(\mathbf{z}). \label{eq:nest}
+\end{equation}
+Samples from this mixture of Gaussian distributions may be obtained by drawing a node \(\mathbf{z} \in \mathcal{Q}(m, k)\) with multinomial probabilities
+\begin{equation}
+\lambda(\mathbf{z}) = |\hat{\mathbf{P}}_\texttt{LA}| p_\texttt{LA}(\hat{\mathbf{P}}_\texttt{LA} \mathbf{z} + \hat{\boldsymbol{\mathbf{\theta}}}_\texttt{LA} \, | \, \mathbf{y}) \omega(\mathbf{z}),
+\end{equation}
+then drawing from the corresponding Gaussian distribution \autocite{rue2001fast}
+\begin{align}
+\mathbf{x} \sim \tilde p_\texttt{G}(\mathbf{x} \, | \, \hat{\mathbf{P}}_\texttt{LA} \mathbf{z} + \hat{\boldsymbol{\mathbf{\theta}}}_\texttt{LA}, \mathbf{y}).
+\end{align}
 
 \hypertarget{laplace-marginals}{%
 \subsubsection{Laplace marginals}\label{laplace-marginals}}
 
-Move equations for this here.
+\begin{equation}
+\tilde p_\texttt{LA}(x_i, \boldsymbol{\mathbf{\theta}}, \mathbf{y}) = \frac{p(x_i, \mathbf{x}_{-i}, \boldsymbol{\mathbf{\theta}}, \mathbf{y})}{\tilde p_\texttt{G}(\mathbf{x}_{-i} \, | \, x_i, \boldsymbol{\mathbf{\theta}}, \mathbf{y})} \Big\rvert_{\mathbf{x}_{-i} = \hat{\mathbf{x}}_{-i}(x_i, \boldsymbol{\mathbf{\theta}})}.
+\end{equation}
+
+\begin{align}
+\hat{\mathbf{x}}_{-i}(x_i, \boldsymbol{\mathbf{\theta}}) &= \arg\max_{\mathbf{x}_{-i}} \log p(\mathbf{y}, x_i, \mathbf{x}_{-i}, \boldsymbol{\mathbf{\theta}}), \\
+\hat{\mathbf{H}}_{-i, -i}(x_i, \boldsymbol{\mathbf{\theta}}) &= - \frac{\partial^2}{\partial \mathbf{x}_{-i} \partial \mathbf{x}_{-i}^\top} \log p(\mathbf{y}, x_i, \mathbf{x}_{-i}, \boldsymbol{\mathbf{\theta}}) \rvert_{\mathbf{x}_{-i} = \hat{\mathbf{x}}_{-i}(x_i, \boldsymbol{\mathbf{\theta}})}.
+\end{align}
 
 \hypertarget{simplfied-laplace-marginals}{%
 \subsubsection{Simplfied Laplace marginals}\label{simplfied-laplace-marginals}}
 
-\textcite{rue2009approximate} use GMRFs.
+\textcite{rue2009approximate} use GMRFs to approximate the Laplace marginals.
 
 \hypertarget{simplifed-inla}{%
 \subsubsection{Simplifed INLA}\label{simplifed-inla}}
 
-\textcite{wood2020simplified} don't use GMRFs and still do fine.
+\textcite{wood2020simplified} don't use GMRFs to approximate the Laplace marginals and still do fine.
 
 \hypertarget{software}{%
 \section{Software}\label{software}}
@@ -2675,13 +2689,14 @@ For example, a model with one fixed effect \texttt{a} and one IID random effect 
 This interface is easy to engage with for new users, but be limiting for more advanced users.
 For more information, including recent developments, see the \texttt{R-INLA} website \href{https://r-inla.org}{\texttt{https://r-inla.org}}.
 The \texttt{inlabru} R package \autocite{bachl2019inlabru} is one notable example.
+\textcite{gaedke2023parallelized} review recent computational improvements to \texttt{R-INLA}, including parallelism via \texttt{OpenMP} \autocite{diaz2018openmp} and use of the PARDISO sparse linear equation solver \autocite{bollhofer2020state}.
 
 \hypertarget{tmb}{%
 \subsection{\texorpdfstring{\texttt{TMB}}{TMB}}\label{tmb}}
 
 Template Model Builder {[}TMB, or when referring to the software \texttt{TMB}; \textcite{kristensen2016tmb}{]} is an R package which implements the Laplace approximation.
 In \texttt{TMB} derivatives are obtained using automatic differentiation {[}AD; \textcite{baydin2017automatic}{]}, a rule-based method based on decomposition of calculations into elementary operations, which can be combined by repeated use of the chain rule.
-Give an example of TMB use.
+Give an example of \texttt{TMB} use.
 
 \texttt{TMB} C++ templates are compatible with other software.
 \texttt{tmbstan} \autocite{monnahan2018no} allows running HMC via Stan.
@@ -2727,13 +2742,13 @@ formula <- y ~ 1 + CTrt + ClBase4 + CV4 + ClAge + CBT +
   f(Ind,  model = "iid", hyper = tau_prior)    #' Epsilon random effect
 \end{verbatim}
 
-The TMB C++ template for the model is in Appendix \ref{tmb-epil}.
+The \texttt{TMB} C++ template for the model is in Appendix \ref{tmb-epil}.
 
 \hypertarget{another-example}{%
 \subsection{Another example}\label{another-example}}
 
-Choose an example, potentially from Stringer et al, of a model that \texttt{R-INLA} can't fit but INLA with \texttt{TMB} can.
-Demonstrate whether Laplace marginals make a difference to Gaussian marginals there.
+Choose an example of a model that \texttt{R-INLA} can't fit but INLA with \texttt{TMB} can.
+Demonstrate Laplace marginals making a difference to accuracy as compared with Gaussian marginals.
 
 \hypertarget{naomi}{%
 \section{The Naomi model}\label{naomi}}
@@ -2765,7 +2780,7 @@ This proportion is linked to HIV incidence via
 \begin{equation}
 \kappa_i = 1- \exp \left( - \lambda_i \cdot \frac{1 - \rho_i}{\rho_i} \cdot (\Omega_T - \beta_T) - \beta_T \right), \label{eq:kappa}
 \end{equation}
-where the mean duration of recent infection \(\Omega_T\) and the proportion of long-term HIV infections misclassified as recent \(\beta_T\) are strongly informed by priors for the particular survey.
+where the mean duration of recent infection \(\Omega_T\) and the proportion of long-term HIV infections misclassified as recent \(\beta_T\) are strongly informed by prior distributions for the particular survey.
 
 These processes are each informed by household survey data.
 Weighted aggregate survey observations are calculated as
@@ -2803,7 +2818,7 @@ Note that when dependence on a specific number of structured additive predictors
 \section{Extending AGHQ to moderate dimensions}\label{extending-aghq-to-moderate-dimensions}}
 
 The Naomi model has \(m = 24\) hyperparameters.
-AGHQ with the product rule grid requries evaluation of \(|\mathcal{Q}(m, k)| = k^m\) quadrature points.
+AGHQ with the product rule grid requires evaluation of \(|\mathcal{Q}(m, k)| = k^m\) quadrature points.
 This is intractable for \(m = 24\).
 This section focuses on the development of AGHQ rules for moderate dimensions, for use within the nested Laplace approximation algorithm.
 
@@ -2933,7 +2948,7 @@ Similarly, implementation in Stan could be possible by use of the \texttt{bridge
 \hypertarget{statistical-theory}{%
 \subsubsection{Statistical theory}\label{statistical-theory}}
 
-\textcite{stringer2022fast} (Theorem 1) bound the total variation error of AGHQ, establishing convergence in probability of coverage probabilities under the approximate posterior to those under the true posterior.
+\textcite{stringer2022fast} (Theorem 1) bound the total variation error of AGHQ, establishing convergence in probability of coverage probabilities under the approximate posterior distribution to those under the true posterior distribution.
 Similar theory might be established for PCA-AGHQ, or more generally AGHQ with varying numbers of nodes per dimension.
 The challenge of connecting this theory to use of the quadrature rule within nested compuations remains an open question.
 
