--- a/front-and-back-matter/_acknowledgements.Rmd
+++ b/front-and-back-matter/_acknowledgements.Rmd
@@ -1,7 +1,7 @@
-Thanks to my supervisors Seth Flaxman and Jeff Eaton for their guidance and mentorship.
+Thank you to my supervisors Seth Flaxman and Jeff Eaton for their guidance and mentorship.
 I am grateful for the research environment provided by the Modern Statistics and Statistical Machine Learning Centre for Doctoral Training at Imperial and Oxford, the HIV Inference Group at Imperial, and the Machine Learning and Global Health Network across the UK, Denmark, Germany and Singapore.
-Thanks to Mike McLaren, Kevin Esvelt, the Nucleic Acid Observatory team, and the Sculpting Evolution lab for hosting my visit to the MIT Media Lab.
-Thanks to Alex Stringer, and the Department of Statistics and Actuarial Science for hosting my visit to the University of Waterloo.
+Thank you to Mike McLaren, Kevin Esvelt, the Nucleic Acid Observatory team, and the Sculpting Evolution lab for hosting my visit to the MIT Media Lab.
+Thank you to Alex Stringer, and the Department of Statistics and Actuarial Science for hosting my visit to the University of Waterloo.
 My sense for what matters has been shaped (arguably improved) by the Effective Altruism community.
 This research was made possible by funding provided by the Bill & Melinda Gates Foundation and EPSRC.
 
