--- a/references.bib
+++ b/references.bib
@@ -1764,3 +1764,44 @@ doi = {10.1201/9781420072884-c30}
   url = {http://CRAN.R-project.org/package=mvQuad},
 }
 
+@article{rue2001fast,
+  title={Fast sampling of Gaussian Markov random fields},
+  author={Rue, H{\aa}vard},
+  journal={Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+  volume={63},
+  number={2},
+  pages={325--338},
+  year={2001},
+  publisher={Wiley Online Library}
+}
+
+@article{gaedke2023parallelized,
+  title={Parallelized integrated nested Laplace approximations for fast Bayesian inference},
+  author={Gaedke-Merzh{\"a}user, Lisa and van Niekerk, Janet and Schenk, Olaf and Rue, H{\aa}vard},
+  journal={Statistics and Computing},
+  volume={33},
+  number={1},
+  pages={25},
+  year={2023},
+  publisher={Springer}
+}
+
+@inproceedings{diaz2018openmp,
+  title={Openmp 4.5 validation and verification suite for device offload},
+  author={Diaz, Jose Monsalve and Pophale, Swaroop and Hernandez, Oscar and Bernholdt, David E and Chandrasekaran, Sunita},
+  booktitle={Evolving OpenMP for Evolving Architectures: 14th International Workshop on OpenMP, IWOMP 2018, Barcelona, Spain, September 26--28, 2018, Proceedings 14},
+  pages={82--95},
+  year={2018},
+  organization={Springer}
+}
+
+@article{bollhofer2020state,
+  title={State-of-the-art sparse direct solvers},
+  author={Bollh{\"o}fer, Matthias and Schenk, Olaf and Janalik, Radim and Hamm, Steve and Gullapalli, Kiran},
+  journal={Parallel algorithms in computational science and engineering},
+  pages={3--33},
+  year={2020},
+  publisher={Springer}
+}
+
+
