--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -64,7 +64,7 @@ ssa_pop2022 <- 1.2 * 1e9 #' From the world bank
 
 This thesis is about applied and methodological Bayesian statistics.
 It is applied and methodological in that I am concerned with real world questions and the means to answer them.
-The statistical approach is Bayesian because I arrived at conclusions based on data using probability models.
+The statistical approach is Bayesian because I used probability theory to arrive at conclusions based on models for observed data.
 
 (ref:gbd) HIV/AIDS is the largest cause of annual DALYs among individuals aged >1 year in SSA [@ihme2019]. One DALY represents the loss of the equivalent of one year of full health, and is calculated by the sum of years of life lost and years lost due to disability. The disability weights vary between 0 (full health) and 1 (death) depending on severity of the condition.
 
@@ -78,17 +78,17 @@ Quantification of the epidemic using statistics is an important part of the publ
 Effective implementation of both HIV prevention and treatment requires strategic information.
 However, producing suitable estimates of relevant indicators is challenging.
 
-The data I use are recorded from national household surveys or routinely collected from healthcare facilities providing HIV services.
-An important feature of these data are the location and the time at which each observation was recorded
-While diverse, spatio-temporal data have distinctive commonalities which reoccur across settings.
-As a result, the work in this thesis makes use of, and aspires to contribute to the development of, modelling techniques from spatio-temporal statistics.
+The data I use were recorded from national household surveys or routinely collected from healthcare facilities providing HIV services.
+An important feature of these data are the location and time at which each observation was recorded
+While diverse, spatio-temporal data have distinctive reoccuring commonalities across application settings.
+As a result, the work in this thesis both makes use of, and aspires to contribute to, modelling techniques from spatio-temporal statistics.
 
 Computation is an essential part of modern statistical practice.
 Each project in this thesis, and the thesis itself, is accompanied by R [@r] code, hosted on GitHub at [`https://github.com/athowes`](https://github.com/athowes).
 
 ## Chapter overview
 
-This thesis is structured (Figure \@ref(fig:chapter-flowchart)) as follows:
+This thesis is structured as follows:
 
 * Chapter \@ref(hiv-aids) provides an overview of the HIV/AIDS epidemic, and describing the challenges faced by disease surveillance efforts.
 * Chapter \@ref(bayes-st) introduces the statistical concepts and notation used throughout the thesis, focusing on Bayesian modelling and computation, spatio-temporal statistics, and survey methods.
@@ -105,8 +105,4 @@ I applied the method to data from Malawi, and analysed the consequences of infer
 Further, I open the door to a new class of fast, flexible, and accurate Bayesian inference algorithms.
 * Chapter \@ref(conclusions): Finally, I discuss avenues for future work, and my conclusions regarding the research, as well as its strengths and weaknesses.
 
-(ref:chapter-flowchart) Some chapters of the thesis should be read before others. Dashed lines represent recommended, but not required reading. Though chronological order is recommended, Chapters \@ref(beyond-borders), \@ref(multi-agyw) and \@ref(naomi-aghq) may be read in any order as they correspond to research projects which are for the most part separable.
-
-```{r chapter-flowchart, fig.cap="(ref:chapter-flowchart)"}
-knitr::include_graphics("figures/introduction/chapter-flowchart.png")
-```
+Though chronological order is recommended, Chapters \@ref(beyond-borders), \@ref(multi-agyw) and \@ref(naomi-aghq) may be read in any order.
