--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -31,12 +31,12 @@ This is undesirable as it could result in underestimation of uncertainty, ultima
 The methods developed in this chapter combine Laplace approximations with adaptive quadrature, and are descended from the integrated nested Laplace approximation (INLA) method pioneered by @rue2009approximate.
 The INLA method has enabled fast and accurate Bayesian inferences for a vast array of models, across a large number of scientific fields [@rue2017bayesian].
 The success of INLA is in large part due to its accessible implementation in the `R-INLA` software.
-Most applications of and methodological developments relating to the INLA method have used `R-INLA`, with a small number of exceptions [@wood2020simplified; @stringer2022fast].
+Most applications and methodological developments of the INLA method, with few exceptions [@wood2020simplified; @stringer2022fast], have used `R-INLA`.
 In pursuit of an a suitable inference approach for the Naomi model, I implemented an INLA-like method outside `R-INLA`, building upon @stringer2022fast.
 My implementation is compatible with a wider range of models than `R-INLA`, and uses automatic differentiation to obtain the derivatives required for the Laplace approximation.
 
-I began work on this project at the start of my PhD, and only began making meaningful progress after reading @stringer2022fast.
-I am grateful to later have had the opportunity to collaborate with Alex Stringer, including visiting the University of Waterloo in fall term of 2022.
+Though I began working on this project close to the start of my PhD, I only began making meaningful progress after reading @stringer2022fast.
+I am grateful to later have had the opportunity to collaborate with Alex Stringer, and visit the University of Waterloo during the fall term of 2022.
 The results of our work are presented in @howes2023fast.
 Code for the analysis in this chapter is available from [`https://github.com/athowes/naomi-aghq`](https://github.com/athowes/elgm-inf).
 
@@ -148,8 +148,8 @@ The resulting marginal Laplace approximation, for a particular value of the hype
 
 The marginal Laplace approximation is most accurate when then marginal posterior $p(\mathbf{x} \, | \, \boldsymbol{\mathbf{\theta}}, \mathbf{y})$ is accurately approximated by a Gaussian 
 distribution.
-For the class of latent Gaussian models [@rue2009approximate] the prior on the latent field is Gaussian $\mathbf{x} \sim \mathcal{N}(\mathbf{x} \, | \, \boldsymbol{\mathbf{\theta}})$.
-Although the marginal posterior
+For the class of latent Gaussian models [@rue2009approximate] the prior distribution on the latent field is Gaussian $\mathbf{x} \sim \mathcal{N}(\mathbf{x} \, | \, \boldsymbol{\mathbf{\theta}})$.
+Although the marginal posterior distribution
 \begin{align}
 p(\mathbf{x} \, | \, \boldsymbol{\mathbf{\theta}}, \mathbf{y}) \propto \mathcal{N}(\mathbf{x} \, | \, \boldsymbol{\mathbf{\theta}}) p(\mathbf{y}  \, | \, \mathbf{x}, \boldsymbol{\mathbf{\theta}})
 \end{align}
@@ -263,7 +263,7 @@ The AGHQ estimate of the normalising constant for $k = 1$ is given by
 \end{equation}
 and corresponds exactly to the Laplace approximation $\tilde p_{\texttt{LA}}(\mathbf{y})$ given in Equation \@ref(eq:la2).
 
-(ref:aghq-demo) The Gauss-Hermite quadrature nodes $\mathbf{z} \in \mathcal{Q}(2, 3)$ for a two-dimensional integral with three nodes per dimension (A). Adaption occurs based on the mode (B) and covariance of the integrand via either the Cholesky (C) or spectral (D) decomposition of the inverse curvature at the mode. The integrand is $f(z_1, z_2) = \text{sn}(0.5 z_1, \alpha = 2) \cdot \text{sn}(0.8 z_1 - 0.5 z_2, \alpha = -2)$, where $\text{sn}(\cdot)$ is the standard skewnormal probability density function with shape parameter $\alpha \in \mathbb{R}$.
+(ref:aghq-demo) The Gauss-Hermite quadrature nodes $\mathbf{z} \in \mathcal{Q}(2, 3)$ for a two-dimensional integral with three nodes per dimension (A). Adaption occurs based on the mode (B) and covariance of the integrand via either the Cholesky (C) or spectral (D) decomposition of the inverse curvature at the mode. Here, the integrand is $f(z_1, z_2) = \text{sn}(0.5 z_1, \alpha = 2) \cdot \text{sn}(0.8 z_1 - 0.5 z_2, \alpha = -2)$, where $\text{sn}(\cdot)$ is the standard skewnormal probability density function with shape parameter $\alpha \in \mathbb{R}$. For each quadrature rule, the estimate of the integral is given by...
 
 ```{r aghq-demo, fig.cap="(ref:aghq-demo)"}
 knitr::include_graphics("figures/naomi-aghq/aghq-demo.png")
@@ -296,22 +296,45 @@ The nested AGHQ estimate of the posterior normalising constant is then
 \begin{equation}
 \tilde p_{\texttt{AQ}}(\mathbf{y}) = | \hat{\mathbf{P}}_\texttt{LA} | \sum_{\mathbf{z} \in \mathcal{Q}(m, k)} \tilde p_\texttt{LA}(\boldsymbol{\mathbf{\theta}}(\mathbf{z}), \mathbf{y}) \omega(\mathbf{z}).
 \end{equation}
+The normalised marginal Laplace approximation is
+\begin{equation}
+\tilde p_{\texttt{LA}}(\boldsymbol{\mathbf{\theta}} \, | \, \mathbf{y}) = \frac{\tilde p_{\texttt{LA}}(\boldsymbol{\mathbf{\theta}}, \mathbf{y})}{\tilde p_{\texttt{AQ}}(\mathbf{y})}.
+\end{equation}
+Methods for obtaining $\tilde p(\mathbf{x} \, | \, \mathbf{y})$ vary.
 
 #### Gaussian marginals
 
-Multinomial then Gaussian.
+Inferences for the latent field can be obtained by [@rue2007approximate]
+\begin{equation}
+\tilde p(\mathbf{x} \, | \, \mathbf{y}) = |\hat{\mathbf{P}}_\texttt{LA}| \sum_{\mathbf{z} \in \mathcal{Q}(m, k)} \tilde p_\texttt{G}(\mathbf{x} \, | \, \hat{\mathbf{P}}_\texttt{LA} \mathbf{z} + \hat{\boldsymbol{\mathbf{\theta}}}_\texttt{LA}, \mathbf{y}) \tilde p_\texttt{LA}(\hat{\mathbf{P}}_\texttt{LA} \mathbf{z} + \hat{\boldsymbol{\mathbf{\theta}}}_\texttt{LA} \, | \, \mathbf{y}) \omega(\mathbf{z}). \label{eq:nest}
+\end{equation}
+Samples from this mixture of Gaussian distributions may be obtained by drawing a node $\mathbf{z} \in \mathcal{Q}(m, k)$ with multinomial probabilities
+\begin{equation}
+\lambda(\mathbf{z}) = |\hat{\mathbf{P}}_\texttt{LA}| p_\texttt{LA}(\hat{\mathbf{P}}_\texttt{LA} \mathbf{z} + \hat{\boldsymbol{\mathbf{\theta}}}_\texttt{LA} \, | \, \mathbf{y}) \omega(\mathbf{z}),
+\end{equation}
+then drawing from the corresponding Gaussian distribution [@rue2001fast]
+\begin{align}
+\mathbf{x} \sim \tilde p_\texttt{G}(\mathbf{x} \, | \, \hat{\mathbf{P}}_\texttt{LA} \mathbf{z} + \hat{\boldsymbol{\mathbf{\theta}}}_\texttt{LA}, \mathbf{y}).
+\end{align}
 
 #### Laplace marginals
 
-Move equations for this here.
+\begin{equation}
+\tilde p_\texttt{LA}(x_i, \boldsymbol{\mathbf{\theta}}, \mathbf{y}) = \frac{p(x_i, \mathbf{x}_{-i}, \boldsymbol{\mathbf{\theta}}, \mathbf{y})}{\tilde p_\texttt{G}(\mathbf{x}_{-i} \, | \, x_i, \boldsymbol{\mathbf{\theta}}, \mathbf{y})} \Big\rvert_{\mathbf{x}_{-i} = \hat{\mathbf{x}}_{-i}(x_i, \boldsymbol{\mathbf{\theta}})}.
+\end{equation}
+
+\begin{align}
+\hat{\mathbf{x}}_{-i}(x_i, \boldsymbol{\mathbf{\theta}}) &= \arg\max_{\mathbf{x}_{-i}} \log p(\mathbf{y}, x_i, \mathbf{x}_{-i}, \boldsymbol{\mathbf{\theta}}), \\
+\hat{\mathbf{H}}_{-i, -i}(x_i, \boldsymbol{\mathbf{\theta}}) &= - \frac{\partial^2}{\partial \mathbf{x}_{-i} \partial \mathbf{x}_{-i}^\top} \log p(\mathbf{y}, x_i, \mathbf{x}_{-i}, \boldsymbol{\mathbf{\theta}}) \rvert_{\mathbf{x}_{-i} = \hat{\mathbf{x}}_{-i}(x_i, \boldsymbol{\mathbf{\theta}})}.
+\end{align}
 
 #### Simplfied Laplace marginals
 
-@rue2009approximate use GMRFs.
+@rue2009approximate use GMRFs to approximate the Laplace marginals.
 
 #### Simplifed INLA
 
-@wood2020simplified don't use GMRFs and still do fine.
+@wood2020simplified don't use GMRFs to approximate the Laplace marginals and still do fine.
 
 ## Software
 
@@ -324,12 +347,13 @@ For example, a model with one fixed effect `a` and one IID random effect `b` is 
 This interface is easy to engage with for new users, but be limiting for more advanced users.
 For more information, including recent developments, see the `R-INLA` website [`https://r-inla.org`](https://r-inla.org).
 The `inlabru` R package [@bachl2019inlabru] is one notable example.
+@gaedke2023parallelized review recent computational improvements to `R-INLA`, including parallelism via `OpenMP` [@diaz2018openmp] and use of the PARDISO sparse linear equation solver [@bollhofer2020state].
 
 ### `TMB`
 
 Template Model Builder [TMB, or when referring to the software `TMB`; @kristensen2016tmb] is an R package which implements the Laplace approximation.
 In `TMB` derivatives are obtained using automatic differentiation [AD; @baydin2017automatic], a rule-based method based on decomposition of calculations into elementary operations, which can be combined by repeated use of the chain rule.
-Give an example of TMB use.
+Give an example of `TMB` use.
 
 `TMB` C++ templates are compatible with other software.
 `tmbstan` [@monnahan2018no] allows running HMC via Stan.
@@ -373,12 +397,12 @@ formula <- y ~ 1 + CTrt + ClBase4 + CV4 + ClAge + CBT +
   f(Ind,  model = "iid", hyper = tau_prior)    #' Epsilon random effect
 ```  
 
-The TMB C++ template for the model is in Appendix \@ref(tmb-epil).
+The `TMB` C++ template for the model is in Appendix \@ref(tmb-epil).
 
 ### Another example
 
-Choose an example, potentially from Stringer et al, of a model that `R-INLA` can't fit but INLA with `TMB` can.
-Demonstrate whether Laplace marginals make a difference to Gaussian marginals there.
+Choose an example of a model that `R-INLA` can't fit but INLA with `TMB` can.
+Demonstrate Laplace marginals making a difference to accuracy as compared with Gaussian marginals.
 
 ## The Naomi model {#naomi}
 
@@ -407,7 +431,7 @@ This proportion is linked to HIV incidence via
 \begin{equation}
 \kappa_i = 1- \exp \left( - \lambda_i \cdot \frac{1 - \rho_i}{\rho_i} \cdot (\Omega_T - \beta_T) - \beta_T \right), (\#eq:kappa)
 \end{equation}
-where the mean duration of recent infection $\Omega_T$ and the proportion of long-term HIV infections misclassified as recent $\beta_T$ are strongly informed by priors for the particular survey.
+where the mean duration of recent infection $\Omega_T$ and the proportion of long-term HIV infections misclassified as recent $\beta_T$ are strongly informed by prior distributions for the particular survey.
 
 These processes are each informed by household survey data.
 Weighted aggregate survey observations are calculated as
@@ -451,7 +475,7 @@ Note that when dependence on a specific number of structured additive predictors
 ## Extending AGHQ to moderate dimensions
 
 The Naomi model has $m = 24$ hyperparameters.
-AGHQ with the product rule grid requries evaluation of $|\mathcal{Q}(m, k)| = k^m$ quadrature points.
+AGHQ with the product rule grid requires evaluation of $|\mathcal{Q}(m, k)| = k^m$ quadrature points.
 This is intractable for $m = 24$.
 This section focuses on the development of AGHQ rules for moderate dimensions, for use within the nested Laplace approximation algorithm.
 
@@ -558,52 +582,8 @@ Similarly, implementation in Stan could be possible by use of the `bridgestan` p
 
 #### Statistical theory
 
-@stringer2022fast (Theorem 1) bound the total variation error of AGHQ, establishing convergence in probability of coverage probabilities under the approximate posterior to those under the true posterior.
+@stringer2022fast (Theorem 1) bound the total variation error of AGHQ, establishing convergence in probability of coverage probabilities under the approximate posterior distribution to those under the true posterior distribution.
 Similar theory might be established for PCA-AGHQ, or more generally AGHQ with varying numbers of nodes per dimension.
 The challenge of connecting this theory to use of the quadrature rule within nested compuations remains an open question.
 
 <!-- Finn Lindgren is working on a method for non-linear predictors, called the [iterative INLA method](https://github.com/inlabru-org/inlabru/blob/55896f10d563c14e34cab577b29b733aac051f86/vignettes/method.Rmd). More [slides](https://informatique-mia.inrae.fr/reseau-resste/sites/default/files/2020-09/slides-Lindgren_Avignon2018.pdf) here -->
-
-<!-- 1. Calculate the mode, Hessian at the mode, lower Cholesky, and Laplace approximation -->
-<!-- \begin{align} -->
-<!-- \hat{\boldsymbol{\mathbf{\theta}}} &= \argmax_{\boldsymbol{\mathbf{\theta}}} {\tilde p_\texttt{LA}(\boldsymbol{\mathbf{\theta}}, \mathbf{y})}, \\ -->
-<!-- \hat{\mathbf{H}} &= - \frac{\partial^2}{\partial \boldsymbol{\mathbf{\theta}} \partial \boldsymbol{\mathbf{\theta}}^\top} \log \tilde p_\texttt{LA}(\boldsymbol{\mathbf{\theta}}, \mathbf{y}) \rvert_{\boldsymbol{\mathbf{\theta}} = \hat \boldsymbol{\mathbf{\theta}}}, \\ -->
-<!-- \hat{\mathbf{H}}^{-1} &= \hat{\mathbf{L}} \hat{\mathbf{L}}^\top, \\ -->
-<!-- \tilde p_\texttt{LA}(\boldsymbol{\mathbf{\theta}}, \mathbf{y}) &= \frac{p(\mathbf{y}, \mathbf{x}, \boldsymbol{\mathbf{\theta}})}{\tilde p_\texttt{G}(\mathbf{x} \, | \, \boldsymbol{\mathbf{\theta}}, \mathbf{y})} \Big\rvert_{\mathbf{x} = \hat \mathbf{x}(\boldsymbol{\mathbf{\theta}})}, -->
-<!-- \end{align} -->
-<!-- where $\tilde p_\texttt{G}(\mathbf{x} \, | \, \boldsymbol{\mathbf{\theta}}, \mathbf{y}) = \mathcal{N}(\mathbf{x} \, | \, \hat \mathbf{x}(\boldsymbol{\mathbf{\theta}}), \hat{\mathbf{H}}(\boldsymbol{\mathbf{\theta}})^{-1})$ is a Gaussian approximation to $p(\mathbf{x} \, | \, \boldsymbol{\mathbf{\theta}}, \mathbf{y})$ with mode and precision matrix given by -->
-<!-- \begin{align} -->
-<!-- \hat \mathbf{x}(\boldsymbol{\mathbf{\theta}}) &= \argmax_\mathbf{x} \log p(\mathbf{y}, \mathbf{x}, \boldsymbol{\mathbf{\theta}}), \\ -->
-<!-- \hat{\mathbf{H}}(\boldsymbol{\mathbf{\theta}}) &= - \frac{\partial^2}{\partial \mathbf{x} \partial \mathbf{x}^\top} \log p(\mathbf{y}, \mathbf{x}, \boldsymbol{\mathbf{\theta}}) \rvert_{\mathbf{x} = \hat \mathbf{x}(\boldsymbol{\mathbf{\theta}})}. -->
-<!-- \end{align} -->
-<!-- 2. Generate a set of nodes $\mathbf{u} \in \mathcal{Q}(m, k)$ and weights $\omega: \mathbf{u} \to \mathbb{R}$ from a Gauss-Hermite quadrature rule with $k$ nodes per dimension. -->
-<!-- Adapt these nodes based on the mode and lower Choleksy via $\boldsymbol{\mathbf{\theta}}(\mathbf{u}) = \hat{\boldsymbol{\mathbf{\theta}}} + \mathbf{L} \mathbf{u}$. -->
-<!-- Use this quadrature rule to calculate the normalising constant $\tilde p_{\texttt{AQ}}(\mathbf{y})$ as follows -->
-<!-- \begin{equation} -->
-<!-- \tilde p_{\texttt{AQ}}(\mathbf{y}) = \sum_{\mathbf{u} \in \mathcal{Q}(m, k)} \tilde p_\texttt{LA}(\boldsymbol{\mathbf{\theta}}(\mathbf{u}), \mathbf{y}) \omega(\mathbf{u}). \label{eq:evidence1} -->
-<!-- \end{equation} -->
-<!-- 3. For $i \in [N]$ generate $l$ nodes $x_i(\bv)$ via a Gauss-Hermite quadrature rule $\bv \in \mathcal{Q}(1, l)$ adapted based on the mode $\hat \mathbf{x}(\boldsymbol{\mathbf{\theta}})_i$ and standard deviation $\sqrt{\text{diag}[\hat{\mathbf{H}}(\boldsymbol{\mathbf{\theta}})^{-1}]_i}$ of the Gaussian marginal. -->
-<!-- A value of $l \geq 4$ is recommended to enable B-spline interpolation. -->
-<!-- For $x_i \in \{ x_i(\bv) \}_{\bv \in \mathcal{Q}(1, l)}$  and $\boldsymbol{\mathbf{\theta}} \in \{ \boldsymbol{\mathbf{\theta}}(\mathbf{u}) \}_{\mathbf{u} \in \mathcal{Q}(m, k)}$ calculate the modes and Hessians -->
-<!-- \begin{align} -->
-<!-- \hat \mathbf{x}_{-i}(x_i, \boldsymbol{\mathbf{\theta}}) &= \argmax_{\mathbf{x}_{-i}} \log p(\mathbf{y}, x_i, \mathbf{x}_{-i}, \boldsymbol{\mathbf{\theta}}), \\ -->
-<!-- \hat{\mathbf{H}}_{-i, -i}(x_i, \boldsymbol{\mathbf{\theta}}) &= - \frac{\partial^2}{\partial \mathbf{x}_{-i} \partial \mathbf{x}_{-i}^\top} \log p(\mathbf{y}, x_i, \mathbf{x}_{-i}, \boldsymbol{\mathbf{\theta}}) \rvert_{\mathbf{x}_{-i} = \hat \mathbf{x}_{-i}(x_i, \boldsymbol{\mathbf{\theta}})}, -->
-<!-- \end{align} -->
-<!-- where optimisation to obtain $\hat \mathbf{x}_{-i}(x_i, \boldsymbol{\mathbf{\theta}})$ can be initialised at $\hat \mathbf{x}(\boldsymbol{\mathbf{\theta}})_{-i}$. -->
-<!-- 4. For $x_i \in \{ x_i(\bv) \}_{\bv \in \mathcal{Q}(1, l)}$ calculate -->
-<!-- \begin{equation} -->
-<!-- \end{equation} -->
-<!-- where -->
-<!-- $$ -->
-<!-- \tilde p_\texttt{LA}(x_i, \mathbf{y}) = \sum_{\mathbf{u} \in \mathcal{Q}(m, k)} \tilde p_\texttt{LA}(x_i, \boldsymbol{\mathbf{\theta}}(\mathbf{u}), \mathbf{y}) \omega(\mathbf{u}). -->
-<!-- $$ -->
-<!-- and -->
-<!-- $$ -->
-<!-- \tilde p_\texttt{LA}(x_i, \boldsymbol{\mathbf{\theta}}, \mathbf{y}) = \frac{p(x_i, \mathbf{x}_{-i}, \boldsymbol{\mathbf{\theta}}, \mathbf{y})}{\tilde p_\texttt{G}(\mathbf{x}_{-i} \, | \, x_i, \boldsymbol{\mathbf{\theta}}, \mathbf{y})} \Big\rvert_{\mathbf{x}_{-i} = \hat \mathbf{x}_{-i}(x_i, \boldsymbol{\mathbf{\theta}})}. -->
-<!-- $$ -->
-<!-- Although Equation \ref{eq:laplace-marginal} can be calculated using the estimate of the evidence given in Equation \ref{eq:evidence1} it is more numerically accurate, and requires little extra computation, to use the estimate -->
-<!-- $$ -->
-<!-- \tilde p_{\texttt{AQ}}(\mathbf{y}) = \sum_{\bv \in \mathcal{Q}(1, l)} \tilde p_\texttt{LA}(x_i(\bv), \mathbf{y}) \omega(\bv) -->
-<!-- $$ -->
-
-<!-- 5. Given $\{x_i(\bv), \tilde p_\texttt{AQ}(x_i(\bv) \, | \, \mathbf{y})\}_{\bv \in \mathcal{Q}(1, l)}$ create a spline interpolant to each posterior marginal on the log-scale. Samples, and thereby relevant posterior marginal summaries, may be obtained using inverse transform sampling. -->
